# SAQScrapper

./: .gitignore  dao.py  database.py  docker-compose.yml  main.py  parsing.py  product.py  psql.sh  scrapping.py  status.py
doc/: Drambuie _ Fiche produit _ SAQ.COM.html  Liqueur d'herbe _ SAQ.COM.html  Liqueur et Crème _ SAQ.COM.html  Produits _ SAQ.COM.html  Spiritueux _ SAQ.COM.html  categories.txt  product-snippet.txt  prompt1.txt  prompt2.txt  prompt3.txt  prompt4.txt
reference/: parsing.py  scrapping.py
saq_api/: Makefile  dune  dune-project  saq_api.opam  server.ml  start.sh  utils.ml
saq_crawler/: saq_crawler.py
saq_importer/: saq_importer.py
tests/: __init__.py  test_saq_crawler.py
vibecoded/: saq_crawler.py
